--- a/gallery.html
+++ b/gallery.html
@@ -3,72 +3,14 @@ layout: site
 title: Gallery
 permalink: /gallery/
 ---
-<style>
-    * {
-        box-sizing: border-box;
-    }
-
-    body {
-        margin: 0;
-        font-family: Arial;
-    }
-
-    .header {
-        text-align: center;
-        padding: 32px;
-    }
-
-    .row {
-        display: -ms-flexbox; /* IE10 */
-        display: flex;
-        -ms-flex-wrap: wrap; /* IE10 */
-        flex-wrap: wrap;
-        padding: 0 4px;
-    }
-
-    /* Create four equal columns that sits next to each other */
-    .column {
-        -ms-flex: 25%; /* IE10 */
-        flex: 25%;
-        max-width: 25%;
-        padding: 0 4px;
-    }
-
-    .column img {
-        margin-top: 8px;
-        vertical-align: middle;
-    }
-
-    /* Responsive layout - makes a two column-layout instead of four columns */
-    @media screen and (max-width: 800px) {
-        .column {
-            -ms-flex: 50%;
-            flex: 50%;
-            max-width: 50%;
-        }
-    }
-
-    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-    @media screen and (max-width: 600px) {
-        .column {
-            -ms-flex: 100%;
-            flex: 100%;
-            max-width: 100%;
-        }
-    }
-</style>
-<body>
-
-<!-- Header -->
-<div class="header">
-    <h1>GALLERY</h1>
-
-</div>
 
 <!-- Photo Grid -->
-<div class="row">
-    <div class="column">
-        <img src="/img/origin.jpg" height="768" width="585"/>
-        <img src="/img/skull.jpg" height="822" width="700"/>
+<div class="gallery">
+    <div class="item"><img src="/img/origin.jpg"></div>
+    <div class="item"><img src="/img/skull.jpg"></div>
+    <div class="item"><img src="/img/pic3.jpg"></div>
+    <div class="item"><img src="/img/pic4.jpg"></div>
+    <div class="item"><img src="/img/pic5.jpg"></div>
+
     </div>
 </div>
