--- a/gallery.html
+++ b/gallery.html
@@ -6,11 +6,24 @@ permalink: /gallery/
 
 <!-- Photo Grid -->
 <div class="gallery">
-    <div class="item"><img src="/img/origin.jpg"></div>
-    <div class="item"><img src="/img/skull.jpg"></div>
+    <div class="item"><img src="/img/pic1.jpg"></div>
+    <div class="item"><img src="/img/pic2.png"></div>
     <div class="item"><img src="/img/pic3.jpg"></div>
     <div class="item"><img src="/img/pic4.jpg"></div>
     <div class="item"><img src="/img/pic5.jpg"></div>
-
-    </div>
+    <div class="item"><img src="/img/pic6.jpg"></div>
+    <div class="item"><img src="/img/pic7.jpg"></div>
+    <div class="item"><img src="/img/pic8.jpg"></div>
+    <div class="item"><img src="/img/pic9.JPG"></div>
+    <div class="item"><img src="/img/pic10.jpg"></div>
+    <div class="item"><img src="/img/pic11.jpg"></div>
+    <div class="item"><img src="/img/pic12.jpg"></div>
+    <div class="item"><img src="/img/pic13.jpg"></div>
+    <div class="item"><img src="/img/pic14.jpg"></div>
+    <div class="item"><img src="/img/pic15.jpg"></div>
+    <div class="item"><img src="/img/pic16.jpg"></div>
+    <div class="item"><img src="/img/pic17.jpg"></div>
+    <div class="item"><img src="/img/pic18.jpg"></div>
+    <div class="item"><img src="/img/pic19.jpg"></div>
+    <div class="item"><img src="/img/pic20.jpg"></div>
 </div>
