--- a/faq.html
+++ b/faq.html
@@ -3,4 +3,39 @@ layout: site
 title: faq
 permalink: /faq/
 ---
-<h2>faq.html</h2>
+<div class="wrapper">
+    <div class="half">
+        <strong>FAQ's</strong>
+        <div class="tab">
+            <input id="tab-one" type="checkbox" name="tabs">
+            <label for="tab-one">My system is out of warranty do I still get any support?</label>
+            <div class="tab-content">
+                <p>Skyline group provides free life time support. So even if your warranty has expired you may call or email our support staff for assistance.</p>
+            </div>
+        </div>
+        <div class="tab">
+            <input id="tab-two" type="checkbox" name="tabs">
+            <label for="tab-two">I would like to upgrade my system does SKYLINE Group buy back my old components?</label>
+            <div class="tab-content">
+                <p>Skyline does not buy back used components unless you purchased the Evolve System Upgrade Service</p>
+            </div>
+        </div>
+        <div class="tab">
+            <input id="tab-three" type="checkbox" name="tabs">
+            <label for="tab-three">How often should I refill my SKYLINE CRYOGENIC Liquid Cooling System?</label>
+            <div class="tab-content">
+                <p>The cooling system will not require constant refills. The liquid within the reservoir should be above the halfway point never at the bottom of the reservoir.</p>
+            </div>
+        </div>
+        <div class="tab">
+            <input id="tab-four" type="checkbox" name="tabs">
+            <label for="tab-four">Where do I download my video drivers NVIDIA / AMD? </label>
+            <div class="tab-content">
+                <p>You may download the NVIDIA video drivers from http://www.nvidia.com/Download/index.aspx?lang=en-us make sure to select the proper video card series.</p>
+                <p>You may download the AMD video drivers from http://support.amd.com/us/Pages/AMDSupportHub.aspx make sure to select the proper video card series.
+                </p>
+
+            </div>
+        </div>
+    </div>
+</div>
