--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@ permalink: /gallery/
 
 <!-- Photo Grid -->
 <div class="gallery">
-    <div class="item"><img src="/img/pic1.jpg"></div>
+
+    <div class="item"><img src="./img/pic1.jpg"></div>
     <div class="item"><img src="/img/pic2.png"></div>
     <div class="item"><img src="/img/pic3.jpg"></div>
     <div class="item"><img src="/img/pic4.jpg"></div>
