--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@ permalink: /gallery/
 <!-- Photo Grid -->
 <div class="gallery">
 
-    <div class="item"><img src="./img/pic1.jpg"></div>
+    <div class="item"><img src="{{ site.baseurl }}/img/pic1.jpg"></div>
     <div class="item"><img src="/img/pic2.png"></div>
     <div class="item"><img src="/img/pic3.jpg"></div>
     <div class="item"><img src="/img/pic4.jpg"></div>
